第二次升级

--- a/pom.xml
+++ b/pom.xml
@@ -242,6 +242,6 @@
         </dependency>
 	</dependencies>
   <build>
-    <finalName>VendingMachine</finalName>
+    <finalName>vend</finalName>
   </build>
 </project>
