--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>VendingMachine Maven Webapp</name>
-  <url>http://maven.apache.org</url>
+  <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
     <properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
