--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/vendmachine?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=root
+jdbc.password=mingming45
 
 
 filters:stat
