--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -72,7 +72,7 @@
 	</listener>
 
 	<welcome-file-list>
-		<welcome-file>/index.jsp</welcome-file>
+		<welcome-file>/login</welcome-file>
 	</welcome-file-list>
 	<error-page>
 		<error-code>404</error-code>
