--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,11 @@
 			<version>2.10.2</version>
 			<type>pom</type>
 		</dependency>
+		<dependency>
+	       <groupId>com.googlecode.ehcache-spring-annotations</groupId>
+	       <artifactId>ehcache-spring-annotations</artifactId>
+	       <version>1.2.0</version>
+        </dependency>
 		<!-- shiro相关依赖 -->
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
@@ -258,9 +263,15 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.9</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.8.8</version>
+		</dependency>
     
 	</dependencies>
   <build>
-    <finalName>vend</finalName>
+    <finalName>ROOT</finalName>
   </build>
 </project>
