--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -79,6 +79,10 @@
 	<listener>
 		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
 	</listener>
+	<!-- WebAppContextListener初始化 -->
+	<listener>   
+   		<listener-class>base.plugin.WebAppContextListener</listener-class>
+	</listener> 
 
 	<welcome-file-list>
 		<welcome-file>/login</welcome-file>
