20170925第一次提交

--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -1,6 +1,6 @@
 #程序版本
 version=20170909-0.0.0.1
 #web后台通过中间件发送消息给指定设备URLַ
-midPublishUrl=http://localhost:9000/publish
+midPublishUrl=http://device.key199.com:6969/publish
 #web后台通过中间件发送消息给指定设备URLַ
-midQueryUrl=http://localhost:9000/getDevList
+midQueryUrl=http://device.key199.com:6969/getDevList
