--- a/pom.xml
+++ b/pom.xml
@@ -269,6 +269,12 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>1.8.8</version>
 		</dependency>
+		
+		<dependency>
+		     <groupId>org.mybatis.generator</groupId>
+		     <artifactId>mybatis-generator-core</artifactId>
+		     <version>1.3.2</version>
+		</dependency>
     
 	</dependencies>
   <build>
